--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center" id="Home">
-    <img class="m-3" src="assets/img/20231025_175434.png" style="width: 200px; height: 200px;"/>
+    <img class="m-3" src="assets/img/profile.png" style="width: 200px; height: 200px;"/>
         <h1 class="display-4">Hello, world!</h1>
         <p class="lead">alfachri | FrontEnd Dev</p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L40,186.7C80,213,160,267,240,266.7C320,267,400,213,480,181.3C560,149,640,139,720,154.7C800,171,880,213,960,192C1040,171,1120,85,1200,58.7C1280,32,1360,64,1400,80L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
